--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.3",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-calendar-heatmap": "^1.10.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
